--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,7 @@ img {
   border-radius: 4px;
 
   transition: border var(--transition-duration) var(--animation-timing),
-    fill 2000ms var(--animation-timing);
+    fill var(--transition-duration) var(--animation-timing);
 }
 
 .our-clients:hover,
@@ -704,6 +704,61 @@ img {
 
 .footer-address {
   margin-top: 20px;
+}
+
+/* footer subsribe form */
+
+.subscribe-list {
+  display: flex;
+}
+
+.footer-subscribe {
+  margin-left: 93px;
+}
+
+.button-subscribe {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+
+  width: 200px;
+  height: 50px;
+  padding-right: 62px;
+  background-color: var(--bg-color-effect);
+  border-radius: 4px;
+  border: transparent;
+  cursor: pointer;
+  position: relative;
+
+  transition-property: box-shadow;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--animation-timing);
+}
+
+.button-subscribe:hover,
+.button-subscribe:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-input {
+  letter-spacing: 0.03em;
+  padding-left: 16px;
+  margin-right: 15px;
+  width: 358px;
+  height: 50px;
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: var(--fifth-text-color);
+}
+
+.icon-send {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  fill: var(--fifth-text-color);
 }
 
 /* gallery styles */
@@ -822,7 +877,7 @@ img {
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
+  opacity: 1;
   pointer-events: none;
 }
 
@@ -855,4 +910,197 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+
+  transition: fill var(--transition-duration) var(--animation-timing);
+}
+
+.button-modal-close:hover,
+.button-modal-close:focus {
+  fill: var(--bg-color-effect);
+}
+
+.text {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.form {
+  width: 100%;
+  height: 100%;
+  padding-top: 40px;
+  padding-right: 39px;
+  padding-bottom: 40px;
+  padding-left: 41px;
+  align-items: center;
+}
+
+.form-input {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+
+  transition: border var(--transition-duration) var(--animation-timing);
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-field input {
+  width: 448px;
+  height: 40px;
+  margin: 0;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.input-name {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  }
+
+.form-input:hover,
+.form-input:focus{
+border: 1px solid var(--bg-color-effect);
+cursor: pointer;
+}
+
+.form-input:hover + .icon-form-input,
+.form-input:focus + .icon-form-input{
+fill:var(--bg-color-effect);
+}
+
+.icon-form-input {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+
+  transition: fill var(--transition-duration) var(--animation-timing);
+}
+
+.form-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--secodary-text-color);
+  margin-bottom: 4px;
+}
+
+.contract {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration: underline var(--third-text-color);
+
+  color: var(--third-text-color);
+}
+
+textarea {
+  resize: none;
+  padding-top: 12px;
+  padding-right: 16px;
+  padding-bottom: 12px;
+  padding-left: 16px;
+}
+
+.textarea{
+    width: 448px;
+  height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.textarea:hover,
+.textarea:focus{
+    border: 1px solid var(--bg-color-effect);
+    cursor: pointer;
+    transition: border var(--transition-duration) var(--animation-timing);
+}
+
+.submit-form-button {
+  width: 200px;
+  height: 50px;
+  padding-top: 10px;
+  padding-right: 55px;
+  padding-bottom: 10px;
+  padding-left: 56px;
+  align-items: center;
+  background: var(--fourth-bg-color);
+  border: transparent;
+  border-radius: 4px;
+  color: var(--fifth-text-color);
+  transition: box-shadow var(--transition-duration) var(--animation-timing);
+  cursor: pointer;
+}
+
+.submit-form-button:hover,
+.submit-form-button:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.submit-form-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.confirm-area {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--secodary-text-color);
+}
+
+.checkbox {
+  appearance: none;
+  position: absolute;
+}
+
+.checkbox-custom {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.checkbox-icon {
+  margin-right: 8px;
+  display: block;
+  width: 15px;
+  height: 15px;
+  outline: 1px solid var(--primary-text-color);
+  border-radius: 2px;
+
+  transition: outline var(--transition-duration) var(--animation-timing),
+  background-color: var(--transition-duration) var(--animation-timing),
+  background-image: var(--transition-duration) var(--animation-timing);
+}
+
+.checkbox:checked + .checkbox-icon {
+  border-color: var(--bg-color-effect);
+  background-color: var(--bg-color-effect);
+  background-image: url(../images/icon-check.svg);
+  outline: 1px solid var(--bg-color-effect);
+  background-origin: border-box;
+  background-size: contain;
 }
