--- a/css/styles.css
+++ b/css/styles.css
@@ -976,6 +976,10 @@ border: 1px solid var(--bg-color-effect);
 cursor: pointer;
 }
 
+input.form-input:focus{
+border: 1px solid var(--bg-color-effect);
+}
+
 .form-input:hover + .icon-form-input,
 .form-input:focus + .icon-form-input{
 fill:var(--bg-color-effect);
@@ -1059,9 +1063,7 @@ textarea {
 .confirm-area {
   margin-top: 20px;
   margin-bottom: 30px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -1072,6 +1074,7 @@ textarea {
 .checkbox {
   appearance: none;
   position: absolute;
+    transition: border-color var(--transition-duration) var(--animation-timing);
 }
 
 .checkbox-custom {
@@ -1085,10 +1088,10 @@ textarea {
   display: block;
   width: 15px;
   height: 15px;
-  outline: 1px solid var(--primary-text-color);
+  border: 2px solid var(--primary-text-color);
   border-radius: 2px;
 
-  transition: outline var(--transition-duration) var(--animation-timing),
+  transition: border-color var(--transition-duration) var(--animation-timing),
   background-color: var(--transition-duration) var(--animation-timing),
   background-image: var(--transition-duration) var(--animation-timing);
 }
@@ -1097,7 +1100,16 @@ textarea {
   border-color: var(--bg-color-effect);
   background-color: var(--bg-color-effect);
   background-image: url(../images/icon-check.svg);
-  outline: 1px solid var(--bg-color-effect);
   background-origin: border-box;
   background-size: contain;
+}
+
+.checkbox:hover + .checkbox-icon,
+.checkbox:focus + .checkbox-icon{
+  border-color: var(--bg-color-effect);
+}
+
+.policy{
+  color: var(--third-text-color);
+  text-decoration: underline;
 }
