--- a/css/styles.css
+++ b/css/styles.css
@@ -725,7 +725,8 @@ img {
 
   width: 200px;
   height: 50px;
-  padding-right: 62px;
+  text-align: left;
+  padding-left: 29px;
   background-color: var(--bg-color-effect);
   border-radius: 4px;
   border: transparent;
@@ -974,10 +975,6 @@ img {
 .form-input:focus{
 border: 1px solid var(--bg-color-effect);
 cursor: pointer;
-}
-
-input.form-input:focus{
-border: 1px solid var(--bg-color-effect);
 }
 
 .form-input:hover + .icon-form-input,
